app/src/global/global.scss
html {
	font-size: 10px;
	height: 100%;
}

body {
	font-size: 1.6rem;
	font-family: $font-main;
	font-weight: 300;
	color: $color-main;
	margin: 0;
	height: 100%;
	overflow-x: hidden;

	&.noscroll {
		overflow: hidden;
		padding-right: 17px;
	}
}

.wrapper {
	display: flex;
	flex-direction: column;
	height: 100%;
}

.header, .footer {
	position: relative;
	flex-grow: 0;
	flex-shrink: 0;
	-webkit-flex: 0 0 auto;
}

.main {
	flex: 1 0 auto;
}

*,
*::before,
*::after {
	box-sizing: border-box;
}

ul {
	margin: 0;
	padding: 0;
	list-style: none;
}

li {
	line-height: 1.4;
}

p {
	line-height: 1.4;
}

a {
	text-decoration: none;
}

input,
textarea {

	&:hover,
	&:focus,
	&:active {
		outline: none;
	}
}

textarea {
	resize: none;
}

hr {
	margin: 0;
}

.container {
	padding-left: 15px;
	padding-right: 15px;
	width: 1170px;
	margin: 0 auto;
	position: relative;

	@include screen-lg() {
		width: 970px;
	}
	@include screen-md() {
		width: 750px;
	}
	@include screen-sm() {
		width: 100%;
	}
}

::selection {
	background: $red;
	color: white;
}

a {
	text-decoration: none;
	color: inherit;
	&:focus, &:active {
		outline: none;
	}
}

input,
textarea {
	&:hover,
	&:focus,
	&:active {
		outline: none;
	}
}

div {
	&:focus, &:active {
		outline: none;
	}
}

textarea {
	resize: none;
}

hr {
	margin: 0;
}

.hidden {
	display: none;
}

.red {
	color: $red;
}

.rub {
	font-family: 'rub';
}

.bold {
	font-weight: 400;
}

.center {
	text-align: center;
}

.center-sm {

  @include screen-sm() {
    text-align: center;
  }
}

.center-xs {

	@include screen-xs() {
		text-align: center;
	}
}

